--- a/dependency/jsoncpp-0.5.0/build_tools/mvs9/jsoncpp/lib_json.vcproj
+++ b/dependency/jsoncpp-0.5.0/build_tools/mvs9/jsoncpp/lib_json.vcproj
@@ -117,6 +117,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				StringPooling="true"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
 				DisableLanguageExtensions="true"
 				ForceConformanceInForLoopScope="false"
