--- a/dependency/FRL/build_tools/msvc9/frl_lib/frl_lib.vcproj
+++ b/dependency/FRL/build_tools/msvc9/frl_lib/frl_lib.vcproj
@@ -116,6 +116,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FRL_LIB_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
