--- a/dependency/opc_client/build_tools/mvs9/opc_client/OPCClientToolKit.vcproj
+++ b/dependency/opc_client/build_tools/mvs9/opc_client/OPCClientToolKit.vcproj
@@ -112,6 +112,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_WIN32_DCOM"
 				StringPooling="true"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
